refactor gist.cy.js
Added describe for create and list tests.
Moved partialUrl to top of the describe function
Added start script to package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 
   "main": "cypress.config.js",
   "scripts": {
-    "test": "cypress run"
+    "test": "cypress run",
+    "start": "npx cypress open"
   },
   "keywords": ["Testing", "Cypress.io", "Cypress Tests", "Gist Github"
   ],
